--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
 		<cite>Test2</cite>
 		Answer:Inline
 	</div>
-	<div  data-ns-test class=" block-inline-cite">
+	<div  data-ns-test class=" block-inline-code">
 		<code>Test1</code>
 		<code>Test2</code>
 		Answer:Inline
